--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
     
-    <!-- === START: ADSENSE SCRIPT === -->
-    <!-- AdSense অনুমোদন পাওয়ার পর, আপনার পাবলিশার আইডি সহ স্ক্রিপ্ট কোডটি এখানে বসাবেন -->
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-xxxxxxxxxxxxxxxx"
+    <!-- === START: YOUR REAL ADSENSE SCRIPT === -->
+    <!-- এই কোডটি আপনার সাইটের মালিকানা যাচাই এবং বিজ্ঞাপন দেখানোর জন্য আবশ্যক -->
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1623104535035572"
      crossorigin="anonymous"></script>
     <!-- === END: ADSENSE SCRIPT === -->
 
@@ -530,3 +530,4 @@
     </script>
 </body>
 </html>
+--- END OF FILE index.html ---
